--- a/wiki/ConnectionGuide.wiki
+++ b/wiki/ConnectionGuide.wiki
@@ -1,13 +1,5 @@
 #summary How to connect 1-wire bus to Crestron serial port
 
-= Introduction =
+= Electric scheme of the connector =
 
-Add your content here.
-
-
-= Details =
-
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+[https://googledrive.com/host/0B8F7wnwnAleGWmhzZWpKS0FMOXc/scheme.tiff]
