Edited wiki page ConnectionGuide through web user interface.

--- a/wiki/ConnectionGuide.wiki
+++ b/wiki/ConnectionGuide.wiki
@@ -3,3 +3,13 @@
 = Electric scheme of the connector =
 
 https://googledrive.com/host/0B8F7wnwnAleGWmhzZWpKS0FMOXc/scheme.png
+
+For making connector you need a piece of single sided breadboard 11x5 holes, DB9 female connector, screw terminals for connecting to 1-wire bus, diodes and resistors. 
+1. Insert the breadboard between rows of pins DB9, so that the row with 5 pin was at the contacts side of breadboard, and solder connector pins.
+2. Insert the diodes and resistors in the breadboard and bend their leads as shown in drawing «Top view». Solder leads as shown in drawing «Bottom view».
+3. Insert screw terminals. Solder it pins.
+4. Insert and solder wire for 24V.
+
+If you have Crestron controller without DB9 connector for RS232, like DIN-AP3,  use a screw terminals instead DB9.
+
+https://googledrive.com/host/0B8F7wnwnAleGWmhzZWpKS0FMOXc/pcb.png
