Edited wiki page ProgramingGuide through web user interface.

--- a/wiki/ProgramingGuide.wiki
+++ b/wiki/ProgramingGuide.wiki
@@ -24,9 +24,8 @@ https://googledrive.com/host/0B8F7wnwnAleGWmhzZWpKS0FMOXc/module.png
 = Parameters =
 
 ||port||Select the port to which the signals  rx$ and tx$ are connected.||
-||license||License key. Without license key module can work in demonstration mode during 1 hour. License key is associated with an address of first sensor.||
+||license||License key. Without license key module can work in demonstration mode during 1 hour. License key is associated with an address of first sensor. [Read more about licensing https://code.google.com/p/1wire-for-crestron/wiki/GetLicense] ||
 
 = Commissioning =
 
 Firstly, you must connect each sensor separately and, pressing the "scan_addr" digital join, will get its address.Then you must paste this addresses in "Serial Send" symbol, connected to corresponding "addr$[n]" serial join in module. Then after compiling and downloading you can switch on digital join "polling" and get temperature values from sensor.
-
